--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </style>
 </head>
 <body>
-  <h1>Project one</h1>
+  <h1>MY new Project</h1>
   
   <form onsubmit="return false;">
     <input type="text" id="nameInput" placeholder="Enter your name" required>
